Resolved alignment issues

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -46,7 +46,7 @@
 } */
 
 .footer-layout .footer-bottom {
-  padding: 4rem 6rem;
+  padding: 4rem;
 }
 
 .footer-layout .footer-bottom > p {
